--- a/bank.html
+++ b/bank.html
@@ -17,7 +17,7 @@
     <main>
         <section class="m-10">
             <div class="grid grid-cols-3 gap-5">
-                <div class="w-9/12 mx-auto p-5 w-3/6 bg-indigo-400 rounded-xl">
+                <div class="w-9/12 mx-auto p-5 bg-indigo-400 rounded-xl">
                     <h1 class="text-5xl text-center font-semibold mb-5">DEPOSIT</h1>
                     <h3 class="text-5xl text-center font-semibold mb-5">$<span id="deposit_span">00</span></h3>
                 </div>
