--- a/bank.html
+++ b/bank.html
@@ -48,7 +48,7 @@
                     <div>
                         <input type="number" name="" id="withdraw_field" class="w-9/12 rounded-xl h-10 px-5" placeholder="$ Withdraw Your Amount">
                         <button class="bg-rose-400 px-5 p-2 rounded-xl ml-10 hover:bg-indigo-400 text-white text-xl" id="btn_withdraw">
-                            Deposit
+                            Withdraw
                         </button>
                     </div>
                 </div>
